--- a/src/components/menu-button/index.scss
+++ b/src/components/menu-button/index.scss
@@ -33,3 +33,10 @@
     transform: rotate(45deg) translate(-4px, -7px);
   }
 }
+
+/* Mobile */
+@media only screen and (max-device-width: 740px) {
+  #menu-btn-container:hover div {
+    background-color: #333;
+  }
+}
