--- a/src/components/menu/index.scss
+++ b/src/components/menu/index.scss
@@ -65,3 +65,30 @@
     font-size: 1.75em;
   }
 }
+
+/* Portrait */
+@media only screen and (max-device-width: 740px) and (orientation: portrait) {
+  .menu-container ul {
+    margin-top: 0;
+  }
+}
+
+/* Mobile Landscape */
+@media only screen and (max-device-width: 740px) and (orientation: landscape)  {
+  .menu-container {
+
+    ul {
+      margin-top: 0;
+      padding-top: 65px;
+    }
+
+    li a {
+      font-size: 1.5em;
+      line-height: 1.75em;
+    }
+  }
+
+  .icon-container {
+    bottom: 10px;
+  }
+}
